--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,7 +34,7 @@ jobs:
       # This step copies files to a temporary directory and then moves them to the target location
       - name: Deploy to EC2
         run: |
-          sudo scp -i deploy_key -o StrictHostKeyChecking=no -r ./dist/* ubuntu@35.174.35.195:/var/www/html/atlas-website2
+          sudo scp1 -i deploy_key -o StrictHostKeyChecking=no -r ./dist/* ubuntu@35.174.35.195:/var/www/html/atlas-website2
 
       - name: Start Application on EC2
         run: |
